# stochfit

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LocalTestRun.testrunconfig  Modelfile  README.md  README_SETUP.md  StochFit.sln  buildStochFit.bat  buildStochFitinstaller.bat  changelog.txt  plan.md  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot-auto-merge.yml  release.yml
1.7.0/CUDAtest/CUDAtest/: CUDA.cu  CUDAtest.icproj  CUDAtest.vcproj  ReadMe.txt  cuda.cubin  defines.h  kernel.cu  (+1 more)
1.7.0/MIRefl/: CEDP.cpp  CEDP.h  MIRefl.cpp  MIRefl.icproj  MIRefl.sln  MyComplex.h  ParamVector.cpp  ReadMe.txt  SettingsStruct.h  stdafx.h
1.7.0/StochFitMain/: LocalTestRun.testrunconfig  StochFit.sln  buildStochFit.bat
ASA/: ASA.icproj  ASA.vcproj  asa_base.cpp  asa_base.h  asa_class.h  defines.h  localfitting.cpp  random.h  stdafx.h
CUDAtest/: CUDA.sln
CUDAtest/CUDAtest/: CUDAtest.cpp  stdafx.cpp
GIDFitMain/: BuildLAPACK.bat  GIDFit.sln
GIDFitMain/GIDFIT Installer/: GIDFIT Installer.vdproj
GIDFitMain/GIDFit/: AdvancedZoomForm.Designer.cs  Form1.Designer.cs  Form1.cs  GIDFit.csproj  GIDFormBase.cs  Graphing.cs  GraphingBase.cs  Program.cs  Pubgraph.Designer.cs  Pubgraph.cs  ReflData.cs
GIDFitMain/LevMardll/: GIDCalc.cpp  GIDCalc.h  LevMardll.cpp  LevMardll.icproj  LevMardll.vcproj  stdafx.cpp
LevMardll/: AreaFastReflCalc.cpp  AreaFastReflCalc.h  FastReflCalc.cpp  FastReflCalc.h  LevMardll.cpp  LevMardll.h  LevMardll.icproj  LevMardll.vcproj  ReflCalc.cpp  RhoCalc.cpp  RhoCalc.h  Settings.h  packages.config  stdafx.cpp  stdafx.h
MIRefl/: MDParamVec.h  MIRefl.icproj  MIRefl.vcproj  MIRefl.vcxproj  ReflCalc.cpp  ReflCalc.h  ReflCalctest.cpp  SettingsStruct.h  stdafx.cpp
NURBs/: NURB.sln
NURBs/NURB/: Form1.Designer.cs  Form1.cs  GraphingBase.cs  GraphingBaseold.cs  NURBGenerator.cs
ReflStress/ReflStress/: ReadMe.txt  ReflStress.cpp  ReflStress.icproj  ReflStress.sln  ReflStress.vcproj  localstdafx.h  stdafx.cpp
StochFit/StochFit/: AboutBox1.cs  SLDCalculator.cs  StochFit.cs  StochFit.designer.cs  StochFit.resx  StochFitMain.csproj  app.config
StochFitMain/: BuildLAPACK.bat  Installer.nsi  StochFit.sln  StochFit.vsmdi  buildStochFit.bat  changelog.txt
StochFitMain/ASA/: ASA.icproj  ASA.vcproj  asa_base.cpp  asa_base.h  asa_class.cpp  localfitting.h
StochFitMain/Build Items/: BuildLAPACK.bat
StochFitMain/LevMar/: AreaFastReflCalc.h  FastReflCalc.cpp  LevMardll.h  LevMardll.vcproj  ParameterContainer.h  ReflCalc.cpp  ReflCalc.h  Settings.h  mersenne.cpp  stdafx.h
StochFitMain/LevMardll/: FastReflCalc.cpp  FastReflCalc.h  LMRoutines.cpp  LevMardll.cpp  LevMardll.h  LevMardll.icproj  LevMardll.sln  LevMardll.vcproj  MyComplex.h  ParameterContainer.h  RhoCalc.cpp  RhoCalc.h  Settings.h  lm_core.c  random.h  randomc.h  stdafx.h
StochFitMain/StochFitSetup/: StochFitSetup.vdproj
StochFitMain/StochFitdll/: ASA.cpp  ASA.h  CEDP.cpp  CEDP.h  CObjectiveFunc.cpp  CObjectiveFunc.h  Genfitdll.cpp  Genfitdll.h  Genome.h  MyComplex.h  ParamVector.cpp  ParamVector.h  ReflCalc.cpp  ReflCalc.h  SA_Dispatcher.cpp  SA_Dispatcher.h  SettingsStruct.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  StochFit.icproj  StochFit.vcproj  StochFitDll.cpp  StochFitDll.h  StochFitHarness.cpp  StochFitHarness.h  multilayer.cpp  random.h  stdafx.h
StochFitMain/TestProject1/: SLDCalculatorTest.cs  TestProject1.csproj  app.config
StochFitSetup/: StochFitSetup.sln  StochFitSetup.vdproj
StochFitdll/: CEDP.h  GenfitHarness.cpp  GenfitHarness.h  Genome.cpp  MyComplex.h  ParamVector.h  ReflCalc.cpp  ReflCalc.h  SA_Dispatcher.cpp  SA_Dispatcher.h  SimulatedAnnealing.cpp  StochFit.icproj  StochFit.vcproj  StochFit.vcxproj  StochFitDll.h  StochFitHarness.h  StochSelection.cpp  StochSelection.h  multilayer.h  stdafx.h
ZedGraph/source/: ZedGraph.csproj
cmake/: Vcpkg.cmake
documentation/: QuickStart.docx
documentation/Code documentation/: Docs.shfb
env/cmake/: FindCUDAOptional.cmake  MsvcEnvironment.cmake  Vcpkg.cmake
gui/: forge.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
gui/src/: typings.d.ts
include/: platform.h
include/levmar/: BoxLayerBuild.h  FastReflCalc.h  LevMardll.h  ParameterContainer.h  RhoCalc.h  Settings.h  SettingsBridge.h
include/stochfit/: Algorithm.h  Anneal.h  AnnealPolicies.h  CEDP.h  LayerStack.h  ParamVector.h  ParameterStepper.h  QSmear.h  ReflCalc.h  ReflectivityObjective.h  SA_Dispatcher.h  SettingsStruct.h  SimulatedAnnealing.h  StochFitDll.h  StochFitHarness.h  UnifiedReflectivity.h
previous_implementation/: BuildLAPACK.bat  CReflCalc.cpp  FastReflCalc.cpp  Installer.nsi  LevmarReflCalc.cpp
previous_implementation/LevMardll/: FastReflCalc.cpp  LevMardll.vcproj  LevMardll.vcxproj  ParameterContainer.h  mersenne.cpp  packages.config
previous_implementation/MIRefl/: CEDP.h  MyComplex.h  ParamVector.cpp  ParamVector.h  ReadMe.txt  ReflCalc.h  stdafx.h
previous_implementation/StochFitdll/: CEDP.cpp  StochFitDll.cpp  StochFitHarness.cpp  stdafx.cpp
previous_implementation/dead_code/: MDParamVec.h
resources/: test1refl.txt
samples/: README.md
samples/genx/: SOURCE.md
samples/orsopy/: SOURCE.md
samples/refl1d/: SOURCE.md
samples/refnx/: SOURCE.md
samples/schreiber-lab/: SOURCE.md
schema/: stochfit.fbs
src/levmardll/: BoxLayerBuild.cpp  FastReflCalc.cpp  LMRoutines.cpp  LevMardll.cpp  ReflCalc.cpp  RhoCalc.cpp  SettingsBridge.cpp
src/mirefl/: CEDP.cpp  MDParamVec.h  MIRefl.cpp  ReflCalctest.cpp
src/shim/: levmardll_shim.cpp  stochfit_shim.cpp
src/stochfitdll/: AnnealPolicies.cpp  CEDP.cpp  ParamVector.cpp  ParameterStepper.cpp  ReflCalc.cpp  ReflectivityObjective.cpp  SA_Dispatcher.cpp  SettingsStruct.cpp  SimulatedAnnealing.cpp  StochFitDll.cpp  StochFitHarness.cpp  UnifiedReflectivity.cpp
tests/: MIRefl.cpp  stochfit_profile.cpp  test_reflectivity.cpp
tools/: collect-vtune-profile.ps1  export-vtune-reports.ps1  run-intel-profile.bat
(+300 files in other folders)
